fix(tmux): use zsh in sessionizer
Also, pare down the number of modules loaded in Starship, including the
Git Status module which is slow on larger projects.

--- a/common/starship/.config/starship.toml
+++ b/common/starship/.config/starship.toml
@@ -1,2 +1,31 @@
+format = """
+$username\
+$hostname\
+$localip\
+$shlvl\
+$singularity\
+$kubernetes\
+$directory\
+$vcsh\
+$git_branch\
+$git_commit\
+$git_state\
+$git_metrics\
+$golang\
+$haskell\
+$ocaml\
+$rust\
+$sudo\
+$cmd_duration\
+$line_break\
+$jobs\
+$battery\
+$time\
+$status\
+$os\
+$container\
+$shell\
+$character"""
+
 [rlang]
 disabled = true
