--- a/common/tmux/.tmux.conf
+++ b/common/tmux/.tmux.conf
@@ -75,7 +75,7 @@ bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
 
-bind-key -r i run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
+bind-key -r i run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh default-shell /bin/zsh"
 bind-key D run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/workspace/data-processing"
 bind-key P run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh ~/personal/pkm/"
 
