--- a/macos/skhd/.skhdrc
+++ b/macos/skhd/.skhdrc
@@ -165,7 +165,7 @@ apps < escape ; default
 apps < n : open ~ && skhd -k "escape"
 apps < f : open /Applications/Firefox.app && skhd -k "escape"
 apps < m : open /System/Applications/Messages.app && skhd -k "escape"
-apps < shift - m : wezterm -e fish -c neomutt && skhd -k "escape"
+apps < shift - m : skhd -k "escape" && wezterm -e fish -c neomutt
 apps < s : open /Applications/Spotify.app && skhd -k "escape"
 apps < shift - s : open /Applications/Slack.app && skhd -k "escape"
 apps < shift - o : open /Applications/Obsidian.app && skhd -k "escape"
