--- a/arch/hypr/.config/hypr/hyprland.conf
+++ b/arch/hypr/.config/hypr/hyprland.conf
@@ -145,11 +145,13 @@ general {
 decoration {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
     rounding = 11
-    multisample_edges = true
-    blur = yes
-    blur_size = 10
-    blur_passes = 2
-    blur_new_optimizations = on
+
+    blur {
+        enabled = yes
+        size = 10
+        passes = 2
+        new_optimizations = on
+    }
 
     active_opacity = 1.0
     inactive_opacity = 0.9
