feat(hypr): make hyprland less flashy

--- a/arch/hypr/.config/hypr/hyprland.conf
+++ b/arch/hypr/.config/hypr/hyprland.conf
@@ -144,7 +144,7 @@ general {
 
 decoration {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    rounding = 11
+    rounding = 3
 
     blur {
         enabled = yes
@@ -171,16 +171,17 @@ animations {
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
 # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-    animation = windows, 1, 6, myBezier
-    animation = windowsOut, 1, 6, default, popin 80%
+    animation = windows, 1, 3, myBezier
+    animation = windowsOut, 1, 3, default
     animation = border, 1, 10, default
-    animation = fade, 1, 6, default
-    animation = workspaces, 1, 4, default, slidevert
+    animation = fade, 0, 6, default
+    animation = workspaces, 0, 3, default, slidevert
 }
 
 dwindle {
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 # pseudotile = yes
+    force_split = 2
     preserve_split = yes
     special_scale_factor = 0.6
 }
@@ -333,7 +334,7 @@ bind = , escape, exec, hyprctl dispatch submap reset && notify-send -u low "Norm
 bind = , F, exec, hyprctl dispatch submap reset && firefox
 
 # Launch Spotify
-bind = , S, exec, hyprctl dispatch submap reset && $term -e ncspot
+bind = , S, exec, hyprctl dispatch submap reset && $term -e spt
 
 # Launch Taskwarrior
 bind = , T, exec, hyprctl dispatch submap reset && $term -e taskwarrior-tui"
