--- a/arch/hypr/.config/hypr/hyprland.conf
+++ b/arch/hypr/.config/hypr/hyprland.conf
@@ -27,8 +27,8 @@ $editor = nvim
 
 # Login
 exec-once = $localBin/login
-exec-once = hyprctl setcursor macOS-Monterey 24
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# exec-once = hyprctl setcursor macOS-Monterey 24
+# exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = $scriptsDir/portal
@@ -198,12 +198,6 @@ gestures {
     workspace_swipe_fingers = 3
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic mouse V1 {
-   sensitivity = -0.5
-}
-
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # Example windowrule v1
 #windowrule = float, yad|nm-connection-editor|pavucontrol
@@ -227,15 +221,15 @@ windowrulev2 = center, class:^(clock)$, title:^(clock)$
 # Zoom and its BS
 windowrulev2 = float, class:^(zoom)$
 
-###### MOUSE BINDS ######
+# MOUSE BINDS
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = SUPER, mouse:272, movewindow
-bindm = SUPER + SHIFT, mouse:272, resizewindow
+bindm = SUPER_SHIFT, mouse:272, resizewindow
 
-###### KEYBINDS ######
+# KEYBINDS
 
-### Workspace management ###
+# Workspace management
 
 # Switch to workspace
 bind = SUPER, 1, workspace, 1
@@ -244,14 +238,14 @@ bind = SUPER, 3, workspace, 3
 bind = SUPER, 4, workspace, 4
 bind = SUPER, 5, workspace, 5
 
-### Window management ###
+# Window management
 
 # Move to desired workspace
-bind = SUPER + SHIFT, 1, movetoworkspacesilent, 1
-bind = SUPER + SHIFT, 2, movetoworkspacesilent, 2
-bind = SUPER + SHIFT, 3, movetoworkspacesilent, 3
-bind = SUPER + SHIFT, 4, movetoworkspacesilent, 4
-bind = SUPER + SHIFT, 5, movetoworkspacesilent, 5
+bind = SUPER_SHIFT, 1, movetoworkspacesilent, 1
+bind = SUPER_SHIFT, 2, movetoworkspacesilent, 2
+bind = SUPER_SHIFT, 3, movetoworkspacesilent, 3
+bind = SUPER_SHIFT, 4, movetoworkspacesilent, 4
+bind = SUPER_SHIFT, 5, movetoworkspacesilent, 5
 
 # Toggle floating
 bind = SUPER, T, togglefloating, active
@@ -269,8 +263,8 @@ bind = SUPER, k, movefocus, u
 bind = SUPER, l, movefocus, r
 
 # Swapping windows around
-bind = SUPER + SHIFT, j, swapnext
-bind = SUPER + SHIFT, k, swapnext, prev
+bind = SUPER_SHIFT, j, swapnext
+bind = SUPER_SHIFT, k, swapnext, prev
 
 # Switching split types and normalizing
 bind = SUPER, R, togglesplit
@@ -279,7 +273,7 @@ bind = SUPER, equal, splitratio, exact 1
 
 # Resizing windows
 
-bind = SUPER + SHIFT, R, exec, hyprctl dispatch submap resize && notify-send -u low "Window resize mode"
+bind = SUPER_SHIFT, R, exec, hyprctl dispatch submap resize && notify-send -u low "Window resize mode"
 
 submap = resize
 
@@ -301,27 +295,27 @@ bind = , equal, splitratio, exact 1
 
 submap = reset
 
-### Application management ###
+# Application management
 
 # Open application launcher
 bind = SUPER, space, exec, rofi -show drun
 #
 # Open program launcher
-bind = SUPER + SHIFT, space, exec, rofi -show run
+bind = SUPER_SHIFT, space, exec, rofi -show run
 
 # Open terminal
 bind = SUPER, return, exec, $term
 
 # Open file browser - nnn
-bind = SUPER + SHIFT, return, exec, $term -e ~/.local/bin/nnn.sh -deaHQ -Pp
+bind = SUPER_SHIFT, return, exec, $term -e ~/.local/bin/nnn.sh -deaHQ -Pp
     
 # Close application window
 bind = SUPER, Q, killactive, window
 
 # Log out
-bind = SUPER + SHIFT, Q, exec, eww -c ~/.config/eww/bar open dialog-logout
+bind = SUPER_SHIFT, Q, exec, eww -c ~/.config/eww/bar open dialog-logout
 
-## Application launching submaps ##
+# Application launching submaps
 
 bind = SUPER, O, exec, hyprctl dispatch submap apps && notify-send -u low "Launch mode"
 
@@ -370,7 +364,7 @@ bind = , W, exec, hyprctl dispatch submap reset && $localBin/wifimenu
 
 submap = reset
 
-### Special keys ###
+# Special keys
 
 # Raise volume
 bind = , XF86AudioRaiseVolume, exec, $scriptsDir/volume --inc
@@ -407,10 +401,10 @@ bind = SHIFT, XF86MonBrightnessDown, exec, $scriptsDir/brightness --dec 1
 # Acivate night flux mode
 # bind = SUPER, XF86MonBrightnessDown, exec, hyprctl keyword decoration:screen_shader $scriptsDir/flux.glsl
 
-### Miscellaneous ###
+# Miscellaneous
 
 # Lock computer
-bind = SUPER + SHIFT, L, exec, $scriptsDir/lockscreen
+bind = SUPER_SHIFT, L, exec, $scriptsDir/lockscreen
 
 # Take screenshot
 bind = SUPER + ALT, 3, exec, $scriptsDir/screenshot --now
