--- a/arch/hypr/.config/hypr/hyprland.conf
+++ b/arch/hypr/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ $localBin = $HOME/.local/bin
 $scriptsDir = $HOME/.config/hypr/scripts
 $hyprDir = $HOME/.config/hypr
 
-$term = wezterm
+$term = kitty -1
 $menu = $scriptsDir/menu
 $fullmenu = $scriptsDir/fullmenu
 $powermenu = $scriptsDir/powermenu
@@ -254,7 +254,7 @@ bind = SUPER, T, togglefloating, active
 bind = SUPER, F, exec, hyprctl dispatch fullscreen 1 && hyprctl setcursor macOS-Monterey 24
 #
 # Toggle complete fullscreen
-bind = SUPER + SHIFT, F, exec, hyprctl dispatch fullscreen 0 && hyprctl setcursor macOS-Monterey 24
+bind = SUPER_SHIFT, F, exec, hyprctl dispatch fullscreen 0 && hyprctl setcursor macOS-Monterey 24
 
 # Moving around
 bind = SUPER, h, movefocus, l
@@ -298,16 +298,16 @@ submap = reset
 # Application management
 
 # Open application launcher
-bind = SUPER, space, exec, rofi -show drun
+bind = SUPER, Space, exec, rofi -show drun
 #
 # Open program launcher
-bind = SUPER_SHIFT, space, exec, rofi -show run
+bind = SUPER_SHIFT, Space, exec, rofi -show run
 
 # Open terminal
-bind = SUPER, return, exec, $term
+bind = SUPER, Return, exec, $term
 
 # Open file browser - nnn
-bind = SUPER_SHIFT, return, exec, $term -e ~/.local/bin/nnn.sh -deaHQ -Pp
+bind = SUPER_SHIFT, Return, exec, $term -e ~/.local/bin/nnn.sh -deaHQ -Pp
     
 # Close application window
 bind = SUPER, Q, killactive, window
