--- a/arch/hypr/.config/hypr/hyprpaper.conf
+++ b/arch/hypr/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/Pictures/walls/wallhaven-g7wwel.jpg
+preload = ~/Pictures/walls/wallhaven-e7wxwl.png
 
-wallpaper = eDP-1,~/Pictures/walls/wallhaven-g7wwel.jpg
+wallpaper = eDP-1,~/Pictures/walls/wallhaven-e7wxwl.png
