Repair the power menu

--- a/arch/hypr/.config/hypr/hyprland.conf
+++ b/arch/hypr/.config/hypr/hyprland.conf
@@ -33,9 +33,9 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = $scriptsDir/portal
 # with lock
-#exec-once = swayidle -w timeout 1200 '$lock' timeout 1200 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep '$lock'
+exec-once = swayidle -w timeout 600 '$lock' timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep '$lock'
 # without lock
-exec-once = swayidle -w  timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep '$lock'
+#exec-once = swayidle -w  timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep '$lock'
 
 # Monitors
 monitor = , preferred, auto, 1
@@ -105,6 +105,7 @@ input {
 
     touchpad {
         natural_scroll = true
+        scroll_factor = 0.8
         tap-to-click = true
         drag_lock = true
         disable_while_typing = true
@@ -307,7 +308,7 @@ bind = SUPER_SHIFT, Space, exec, rofi -show run
 bind = SUPER, Return, exec, $term
 
 # Open file browser - nnn
-bind = SUPER_SHIFT, Return, exec, $term -e ~/.local/bin/nnn.sh -deaHQ -Pp
+bind = SUPER_SHIFT, Return, exec, $term -e lf
     
 # Close application window
 bind = SUPER, Q, killactive, window
@@ -328,10 +329,10 @@ bind = , escape, exec, hyprctl dispatch submap reset && notify-send -u low "Norm
 bind = , F, exec, hyprctl dispatch submap reset && firefox
 
 # Launch Spotify
-bind = , S, exec, hyprctl dispatch submap reset && $term -e spt
+bind = , S, exec, hyprctl dispatch submap reset && spotify
 
 # Launch Taskwarrior
-bind = , T, exec, hyprctl dispatch submap reset && $term -e taskwarrior-tui"
+bind = , T, exec, hyprctl dispatch submap reset && $term -e taskwarrior-tui
 
 # Launch Bluebubbles
 bind = , M, exec, hyprctl dispatch submap reset && flatpak run app.bluebubbles.BlueBubbles
@@ -408,8 +409,8 @@ bind = SUPER_SHIFT, L, exec, $scriptsDir/lockscreen
 
 # Take screenshot
 bind = SUPER + ALT, 3, exec, $scriptsDir/screenshot --now
-bind = SUPER + ALT, 4, exec, $scriptsDir/screenshot --win
-bind = SUPER + ALT, 5, exec, $scriptsDir/screenshot --area
+bind = SUPER + ALT, 4, exec, $scriptsDir/screenshot --area
+bind = SUPER + ALT, 5, exec, $scriptsDir/screenshot --win
 
 # Emoji picker
 bind = SUPER, E, exec, rofimoji
