--- a/arch/hypr/.config/hypr/hyprland.conf
+++ b/arch/hypr/.config/hypr/hyprland.conf
@@ -130,22 +130,22 @@ general {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
     gaps_in = 3
     gaps_out = 5
-    border_size = 2
+    border_size = 0
 
 #one color
-    col.active_border = rgba($thm_loveaa)
+    # col.active_border = rgba($thm_loveaa)
 
 # two colors - gradient
 # col.active_border = rgba(7aa2f7aa) rgba(c4a7e7aa) 45deg
 
-    col.inactive_border = rgba($thm_surfaceaa)
+    # col.inactive_border = rgba($thm_surfaceaa)
 
     layout = dwindle
 }
 
 decoration {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    rounding = 3
+    rounding = 5
 
     blur {
         enabled = yes
