fix: use aerc in Hyprland, not neomutt

--- a/arch/hypr/.config/hypr/hyprland.conf
+++ b/arch/hypr/.config/hypr/hyprland.conf
@@ -338,7 +338,7 @@ bind = , T, exec, hyprctl dispatch submap reset && $term -e taskwarrior-tui
 bind = , M, exec, hyprctl dispatch submap reset && flatpak run app.bluebubbles.BlueBubbles
 
 # Launch mail
-bind = SHIFT, M, exec, hyprctl dispatch submap reset && $term -e neomutt
+bind = SHIFT, M, exec, hyprctl dispatch submap reset && $term -e aerc
 
 # Launch calculator
 bind = SHIFT, C, exec, hyprctl dispatch submap reset && rofi -show calc
