fix: prevent swayidle from sleeping w/ sound

--- a/arch/hypr/.config/hypr/hyprland.conf
+++ b/arch/hypr/.config/hypr/hyprland.conf
@@ -34,6 +34,7 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = $scriptsDir/portal
 # with lock
 exec-once = swayidle -w timeout 900 '$lock' timeout 900 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep '$lock'
+exec-once = sway-audio-idle-inhibit
 # without lock
 #exec-once = swayidle -w  timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep '$lock'
 
