feat(fish): better support for direnv and nix
Starship now shows if `nix develop` is enabled

--- a/common/starship/.config/starship.toml
+++ b/common/starship/.config/starship.toml
@@ -18,6 +18,7 @@ $python\
 $rust\
 $sudo\
 $cmd_duration\
+$nix_shell\
 $line_break\
 $jobs\
 $battery\
@@ -30,3 +31,7 @@ $character"""
 
 [rlang]
 disabled = true
+
+[nix_shell]
+impure_msg='nix develop'
+format='via [$symbol$state]($style) '
