feat(pomo): updating work period to 50 minutes
Better for sanity. 25 minutes felt like not enough to be in the zone.

--- a/macos/skhd/.skhdrc
+++ b/macos/skhd/.skhdrc
@@ -175,7 +175,7 @@ apps < shift - o : open /Applications/Obsidian.app && skhd -k "escape"
 hyper - p ; pomo
 pomo < escape ; default
 
-pomo < p : ~/go/bin/pomo start && skhd -k "escape"
+pomo < p : ~/go/bin/pomo start --duration 50 && skhd -k "escape"
 pomo < x : ~/go/bin/pomo cancel && skhd -k "escape"
 
 # Shortcut to create a new wezterm term on the fly
