feat: add keyb backlight control
At looonnnnnggggggg last

--- a/arch/hypr/.config/hypr/hyprland.conf
+++ b/arch/hypr/.config/hypr/hyprland.conf
@@ -392,9 +392,17 @@ bind = , XF86AudioStop, exec, playerctl stop
 bind = , XF86MonBrightnessUp, exec, $scriptsDir/brightness --inc
 bind = SHIFT, XF86MonBrightnessUp, exec, $scriptsDir/brightness --inc 1
 
+# Raise keyb brightness
+bind = , XF86KbdBrightnessUp, exec, $scriptsDir/brightness --kinc
+bind = SHIFT, XF86KbdBrightnessUp, exec, $scriptsDir/brightness --kinc 1
+
 # Lower screen brightness
 bind = , XF86MonBrightnessDown, exec, $scriptsDir/brightness --dec
 bind = SHIFT, XF86MonBrightnessDown, exec, $scriptsDir/brightness --dec 1
+#
+# Lower keyb brightness
+bind = , XF86KbdBrightnessDown, exec, $scriptsDir/brightness --kdec
+bind = SHIFT, XF86KbdBrightnessDown, exec, $scriptsDir/brightness --kdec 1
 
 # Activate day flux mode
 # bind = SUPER, XF86MonBrightnessUp, exec, hyprctl keyword decoration:screen_shader $scriptsDir/base.glsl
