--- a/macos/yabai/.yabairc
+++ b/macos/yabai/.yabairc
@@ -41,6 +41,7 @@ yabai -m rule --add app="^zoom.us$" manage=off
 yabai -m rule --add app="^Cisco AnyConnect Secure Mobility Client$" manage=off
 yabai -m rule --add app="^Wally$" manage=off
 yabai -m rule --add app="^Alfred Preferences$" manage=off
+yabai -m rule --add app="^The Unarchiver$" manage=off
 yabai -m rule --add app="^LibreOffice$" title="^Delete Contents$" manage=off
 
 echo "yabai configuration loaded.."
