feat: implement e-ink theme

--- a/common/kitty/.config/kitty/kitty.conf
+++ b/common/kitty/.config/kitty/kitty.conf
@@ -55,59 +55,46 @@ macos_show_window_title_in none
 hide_window_decorations titlebar-only
 #: }}}
 
-#: Active theme (Rosé Pine - Moon) {{{
-## name: Rosé Pine Moon
-## author: mvllow
-## license: MIT
-## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine-moon.conf
-## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
+#: Active theme (e-ink - Light) {{{
 
-foreground               #e0def4
-background               #232136
-selection_foreground     #e0def4
-selection_background     #44415a
+foreground #474747
+background #CCCCCC
+selection_foreground none
+selection_background #AEAEAE
 
-cursor                   #56526e
-cursor_text_color        #e0def4
-
-url_color                #c4a7e7
-
-active_tab_foreground    #e0def4
-active_tab_background    #393552
-inactive_tab_foreground  #6e6a86
-inactive_tab_background  #232136
+cursor none
 
 # black
-color0   #393552
-color8   #6e6a86
+color0  #CCCCCC
+color8  #5E5E5E
 
 # red
-color1   #eb6f92
-color9   #eb6f92
+color1  #333333
+color9  #333333
 
 # green
-color2   #3e8fb0
-color10  #3e8fb0
+color2  #9A9A9A
+color10 #9A9A9A
 
 # yellow
-color3   #f6c177
-color11  #f6c177
+color3  #868686
+color11 #868686
 
 # blue
-color4   #9ccfd8
-color12  #9ccfd8
+color4  #727272
+color12 #727272
 
 # magenta
-color5   #c4a7e7
-color13  #c4a7e7
+color5  #AEAEAE
+color13 #AEAEAE
 
 # cyan
-color6   #ea9a97
-color14  #ea9a97
+color6  #4A4A4A
+color14 #4A4A4A
 
-# white
-color7   #e0def4
-color15  #e0def4
+# black
+color7  #5E5E5E
+color15 #7C7C7C
 #: }}}
 
 #: Remote control {{{
