--- a/common/kitty/.config/kitty/kitty.conf
+++ b/common/kitty/.config/kitty/kitty.conf
@@ -1,40 +1,40 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Font stuff {{{
-font_family Hasklug Nerd Font Mono
-bold_font Hasklug Nerd Font Mono Bold
-italic_font Hasklug Nerd Font Mono Regular
-bold_italic_font Hasklug Nerd Font Mono Bold
+font_family Hack Nerd Font Mono
+bold_font Hack Nerd Font Mono Bold
+italic_font Hack Nerd Font Mono Regular
+bold_italic_font Hack Nerd Font Mono Bold
 font_size 12.0
 
 # ref: https://erwin.co/kitty-and-nerd-fonts/
 # ref: https://github.com/ryanoasis/nerd-fonts/wiki/Glyph-Sets-and-Code-Points#glyph-sets
 # Nerd Fonts - Seti-UI + Custom
-symbol_map U+e5fa-U+e631 Hasklug Nerd Font Mono
+symbol_map U+e5fa-U+e631 Hack Nerd Font Mono
 # Nerd Fonts - Devicons
-symbol_map U+e700-U+e7c5 Hasklug Nerd Font Mono
+symbol_map U+e700-U+e7c5 Hack Nerd Font Mono
 # Nerd Fonts - Font awesome
-symbol_map U+f000-U+f2e0 Hasklug Nerd Font Mono
+symbol_map U+f000-U+f2e0 Hack Nerd Font Mono
 # Nerd Fonts - Font awesome extension
-symbol_map U+e200-U+e2a9 Hasklug Nerd Font Mono
+symbol_map U+e200-U+e2a9 Hack Nerd Font Mono
 # Nerd Fonts - Material Design Icons
-symbol_map U+f500-U+fd46 Hasklug Nerd Font Mono
+symbol_map U+f500-U+fd46 Hack Nerd Font Mono
 # Nerd Fonts - Weather Icons
-symbol_map U+e300-U+e3eb Hasklug Nerd Font Mono
+symbol_map U+e300-U+e3eb Hack Nerd Font Mono
 # Nerd Fonts - Octicons
-symbol_map U+f400-U+f4a9,U+2665,U+26A1 Hasklug Nerd Font Mono
+symbol_map U+f400-U+f4a9,U+2665,U+26A1 Hack Nerd Font Mono
 # Nerd Fonts - Powerline
-symbol_map U+e0a0-U+e0a2,U+e0b0-U+e0b3 Hasklug Nerd Font Mono
+symbol_map U+e0a0-U+e0a2,U+e0b0-U+e0b3 Hack Nerd Font Mono
 # Nerd Fonts - Powerline Extra
-symbol_map U+e0a3,U+e0b4-U+e0c8,U+e0ca,U+e0cc-U+e0d4 Hasklug Nerd Font Mono
-# Nerd Fonts - IEC Power Hasklug
-symbol_map U+23fb-U+23fe,U+2b58 Hasklug Nerd Font Mono
+symbol_map U+e0a3,U+e0b4-U+e0c8,U+e0ca,U+e0cc-U+e0d4 Hack Nerd Font Mono
+# Nerd Fonts - IEC Power Hack
+symbol_map U+23fb-U+23fe,U+2b58 Hack Nerd Font Mono
 # Nerd Fonts - Font Logos (Formerly Font Linux)
-symbol_map U+F300-U+F32d Hasklug Nerd Font Mono
+symbol_map U+F300-U+F32d Hack Nerd Font Mono
 # Nerd Fonts - Pomicons
-symbol_map U+E000-U+E00A Hasklug Nerd Font Mono
+symbol_map U+E000-U+E00A Hack Nerd Font Mono
 # Nerd Fonts - Codicons
-symbol_map U+ea60-U+ebeb Hasklug Nerd Font Mono
+symbol_map U+ea60-U+ebeb Hack Nerd Font Mono
 # Misc Code Point Fixes
 # symbol_map U+21B5,U+25B8,U+2630,U+2632,U+2714,U+279C Symbols Nerd Font Mono
 
