chore: tmux stuff

--- a/common/tmux/.tmux.conf
+++ b/common/tmux/.tmux.conf
@@ -40,6 +40,10 @@ set -g mode-keys vi
 
 set -g status-interval 5
 
+# Image rendering
+set -gq allow-passthrough on
+set -g visual-activity off
+
 # Use 1-based indexing for left hand convenience
 set -g base-index 1
 set -g pane-base-index 1
