feat: use fish as shell for kitty

--- a/common/kitty/.config/kitty/kitty.conf
+++ b/common/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,9 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
+#: General stuff {{{
+shell /usr/bin/fish
+#: }}}
+
 #: Font stuff {{{
 font_family Hack Nerd Font Mono
 bold_font Hack Nerd Font Mono Bold
